@@ -1,3 +1,8 @@
+----------------------------------- v0.6.0 -----------------------------------
+
+FEATURES:
+- WinRT and Windows Phone 8 support
+
 ----------------------------------- v0.5.0 -----------------------------------
 
 FEATURES:
